--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 /* Hishjam Protof's Personal Website */
-body::before {
+
+/* body::before {
   content: '';
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  background: rgba(0, 0, 0, 0.4); /*  dark overlay */
+  background: rgba(0, 0, 0, 0.4);
   z-index: -1;
-}
+} */
+
 
 
 body {
