--- a/style.css
+++ b/style.css
@@ -10,19 +10,18 @@
 } */
 
 
-
 body {
   margin: 0;
   font-family: 'Montserrat', sans-serif;
-  background: url('./assets/castle.png') no-repeat center top;
-  background-size: cover;
-  background-position: center -50px;
-
+  background: url('./assets/castle.png') center top / cover no-repeat fixed;
   color: white;
   overflow-x: hidden;
   position: relative;
   backdrop-filter: brightness(0.9) blur(1px);
+  min-height: 100vh;
+  background-color: black; 
 }
+
 
 
 
@@ -34,8 +33,8 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: 0.07;
-  animation: rain-animation 0.4s linear infinite;
+  opacity: 0.1;
+  animation: rain-animation 0.765s linear infinite;
 }
 
 @keyframes rain-animation {
@@ -95,33 +94,32 @@ h2 {
   margin: 20px 0;
   line-height: 1.4;
 }
-
 .social-icons {
   margin: 20px 0;
 }
-
 .social-icons a {
-  margin-top: 23px;
-  margin-right: 15px;
-  font-size: 34px;
-  color: #bbb;
-  background: #1f1f1f;
-  border-radius: 50%;
-  padding: 4px;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  line-height: 34px;
-  transition: transform 0.3s ease, background 0.3s, color 0.3s, box-shadow 0.3s;
-  display: inline-block;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 64px;
+    height: 64px;
+    background-color: transparent;
+    border: 2px solid #6c5ce7; 
+    font-size: 32px;
+    border-radius: 50%;
+    margin: 2rem 1rem 0 0;
+    transition: 0.3s ease;
+    color: #6c5ce7;
 }
 
 .social-icons a:hover {
-  color: #fff;
-  background: #6c5ce7;
-  transform: scale(1.2) rotate(3deg);
-  box-shadow: 0 0 20px #6c5ce7, 0 0 40px #6c5ce780;
+    color: black;
+    transform: scale(1.2) translateY(-4px);
+    background-color: #6c5ce7;
+    box-shadow: 0 0 12px #6c5ce7;
 }
+
+
 
 .contact-button {
   display: inline-block;
